0.07
 - Add $options_hr return value to clean_date(). Implment circa date.
 - Add Výst. to series ordinal cleanup.
 - Add Výstava to series ordinal cleanup.
 - Add Litoměřice to publishing places cleanup.
 - Add example for clean_number_of_pages() to doc.

0.06 2023-11-20T14:16:34+01:00
 - Rewrite to use of MARC::Leader.

0.05 2023-11-11T22:02:39+01:00
 - Add Přelouč to publishing places cleanup.
 - Add edition number use case.
 - Add publisher place use case.
 - Add test for clean_cover().
 - Add verbose parameter.
 - Fix test messages in clean_cover().

0.04 2023-06-11T18:24:52+02:00
 - Add publication date use case.
 - Improve clean_publication_date() code.

0.03 2023-06-09T20:14:12+02:00
 - Add edition number use case.
 - Regen example with output.
 - Warning could be in utf8.

0.02 2023-05-27T11:07:17+02:00
 - Add doc for Utils.
 - Add example to doc.
 - Add README file.
 - Fix dependencies (missing URI).

0.01 2023-05-26T14:14:18+02:00
 - First version.