@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_publisher_name);
-use Test::More 'tests' => 8;
+use Test::More 'tests' => 9;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -46,4 +46,10 @@ is($ret, decode_utf8('[?] Fleischer'),
 $input_publisher_name = decode_utf8('(Západočeská univerzita ;');
 $ret = clean_publisher_name($input_publisher_name);
 is($ret, decode_utf8('Západočeská univerzita'),
+	encode_utf8("Publisher name '$input_publisher_name' after cleanup."));
+
+# Test.
+$input_publisher_name = decode_utf8('Galerie Benedikta Rejta]');
+$ret = clean_publisher_name($input_publisher_name);
+is($ret, decode_utf8('Galerie Benedikta Rejta'),
 	encode_utf8("Publisher name '$input_publisher_name' after cleanup."));
